--- a/style.css
+++ b/style.css
@@ -118,10 +118,60 @@ main .services .card-container .card i{
     margin-bottom: 0.5em;
 }
 
+/* Projects */
 main .projects{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 4em;
 }
+
+main .projects .projects-container{
+    display: flex;
+    gap: 2em;
+    margin: 3em;
+}
+
+main .projects .projects-container div{
+    background-color: #D42039;
+    padding: 5em;
+    width: 15em;
+    border-radius: 20px;
+}
+
+main .projects .projects-container .proj1, .proj2, .proj3{
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+main .projects .projects-container .proj1{
+    background-image: url('./img/img1.png');
+}
+
+main .projects .projects-container .proj2{
+    background-image: url('./img/img2.png');
+}
+
+main .projects .projects-container .proj3{
+    background-image: url('./img/img3.png');
+}
+
+main .contact-container{
+    margin-top: 5em;
+    background-color: white;
+    border-radius: var(--border-radius);
+    display: flex;
+    padding: 5em;
+    gap: 7em;
+}
+
+main .contact-container div{
+    width: 50%;
+}
+
+main .contact-container .img-container img{
+    width: 100%;
+    border-radius: 5%;
+}
+
