--- a/style.css
+++ b/style.css
@@ -174,3 +174,7 @@ main .contact-container .img-container img{
     width: 100%;
     border-radius: 6%;
 }
+
+main .contact-container .form-contact{
+    
+}
