--- a/style.css
+++ b/style.css
@@ -157,6 +157,9 @@ main .projects .projects-container .proj3{
     background-image: url('./img/img3.png');
 }
 
+
+/* Contact Section */
+
 main .contact-container{
     margin-top: 5em;
     background-color: white;
@@ -164,7 +167,7 @@ main .contact-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5em;
+    padding: 2.5em 5em;
     gap: 7em;
 }
 
@@ -183,14 +186,26 @@ main .contact-container .form-contact form{
 }
 
 main .contact-container .form-contact h3{
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 
 main .contact-container .form-contact input, textarea{
     padding: 1em;
     max-width: 400px;
+    border-radius: 5px;
+    border: .1px solid ;
 }
 
 main .contact-container .form-contact textarea{
     resize: none;
+    height: 10em;
+}
+
+main .contact-container .form-contact .submit{
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+footer{
+    background-color: var(--secondary-color);
 }
