--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ main .contact-container{
     align-items: center;
     padding: 2.5em 5em;
     gap: 7em;
+    box-shadow: 0px 1px 20px rgba(128, 128, 128, 0.377);
 }
 
 main .contact-container div{
@@ -208,4 +209,24 @@ main .contact-container .form-contact .submit{
 
 footer{
     background-color: var(--secondary-color);
+    text-align: center;
+    color: white;
+    margin-top: 5em;
+    padding: 3em 0em;
 }
+
+footer .contacts{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1em;
+}
+
+footer hr{
+
+    width: 75%;
+    margin: auto;
+    color: aqua;
+    border: 0.0005px solid#ffffff;
+    margin: 2em auto;
+}
+
