--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ main .services .card-container .card{
     color: white;
     padding: 2em 3em;
     margin-top: 2em;
+    transition: all 0.5 ease;
 }
 
 main .services .card-container .card i{
@@ -222,7 +223,6 @@ footer .contacts{
 }
 
 footer hr{
-
     width: 75%;
     margin: auto;
     color: aqua;
