--- a/style.css
+++ b/style.css
@@ -222,6 +222,12 @@ main #contact-container .form-contact textarea{
 main #contact-container .form-contact .submit{
     background-color: var(--secondary-color);
     color: white;
+    transition: background-color 0.5s ease, letter-spacing 0.5s ease;
+}
+
+main #contact-container .form-contact .submit.hovered{
+    background-color: #0068ad;
+    letter-spacing: 0.5em;
 }
 
 footer{
