--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ main #projects{
 
 main #projects .projects-container{
     display: flex;
+    flex-direction: row;
     gap: 2em;
     margin: 3em;
 }
@@ -188,14 +189,18 @@ main #contact-container{
     gap: 7em;
     box-shadow: 0px 1px 20px rgba(128, 128, 128, 0.377);
 }
-
+main #projects .projects-container{
+    flex-direction: row;
+}
 main #contact-container div{
     width: 50%;
 }
 
 main #contact-container .img-container img{
     width: 100%;
-    border-radius: 6%;
+    border-radius: 6%;main #landing-section .text-container{
+        width: 70%;
+    }
 }
 
 main #contact-container .form-contact form{
@@ -209,7 +214,7 @@ main #contact-container .form-contact h3{
 
 main #contact-container .form-contact input, textarea{
     padding: 1em;
-    max-width: 400px;
+   
     border-radius: 5px;
     border: .1px solid ;
 }
@@ -252,3 +257,100 @@ footer hr{
     margin: 2em auto;
 }
 
+@media screen and (max-width: 1000px) {
+
+    main #landing-section{
+        padding-top: 6em;
+        margin-bottom: 5em;
+    }
+
+    main #landing-section .text-container{
+        width: 90%;
+    }
+  
+    main .services .card-container{
+        flex-direction: column;
+    }
+
+    main .services .card-container .card{
+        width: 100%;
+    }
+
+    main #contact-container .img-container{
+        display: none;
+    }
+
+    main #contact-container{
+        padding: 2.5em 2em;
+    }
+
+    main #contact-container div{
+        width: 85%;
+        margin: auto;
+    }
+
+    main #contact-container{
+        align-items: center;
+        justify-content: center;
+    }
+
+}
+
+/* Tablet query */
+
+@media screen and (max-width: 830px) {
+
+    main #projects .projects-container{
+        flex-direction: column;
+    }
+
+    main #projects .projects-container div{
+        width: 25em;
+        height: 15em;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    main #landing-section{
+        flex-direction: column;
+        padding-top: 25em;
+        margin-bottom: 25em;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+    }
+
+    main #landing-section .img-container img{
+        width: 70%;
+        margin: auto;
+    }
+    main #landing-section .img-container{
+        display: flex;
+    }
+
+    main #landing-section div{
+        width: 100%;
+    }
+
+}
+
+/* Phone query */
+
+@media screen and (max-width: 450px) {
+
+    main{
+        width: 92%;
+    }
+
+    main .services{
+        width: 95%;
+        margin: auto;
+        padding:3em 1em;
+    }
+
+    main #projects .projects-container div{
+        width: 20em;
+        margin: auto;
+        height: 15em;
+    }
+}
