--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav .links li:hover{
 }
 
 main{
-    width: 70%;
+    width: 60%;
     margin: auto;
 }
 
@@ -92,6 +92,7 @@ main #landing-section .text-container p{
     margin-top: 2em;
     color: var(--font-primary);
     font-family: 'Poppins', sans-serif;
+    max-width: 43em;
 }
 
 main #landing-section .img-container img{
@@ -254,7 +255,7 @@ footer hr{
     margin: 2em auto;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1125px) {
 
     main #landing-section{
         padding-top: 6em;
@@ -294,8 +295,16 @@ footer hr{
 }
 
 /* Tablet query */
+@media screen and (max-width: 933px) {
+    main #landing-section{
+        padding-top: 9em;
+        margin-bottom: 7em;
+    }
 
-@media screen and (max-width: 830px) {
+}
+
+@media screen and (max-width: 827px) {
+
 
     main #projects .projects-container{
         flex-direction: column;
@@ -311,15 +320,16 @@ footer hr{
     main #landing-section{
         flex-direction: column;
         padding-top: 25em;
-        margin-bottom: 25em;
+        margin-bottom: 22em;
         align-items: center;
         justify-content: center;
         align-content: center;
     }
-
+   
     main #landing-section .img-container img{
-        width: 70%;
+        width: 80%;
         margin: auto;
+        margin-top: -3em;
     }
     main #landing-section .img-container{
         display: flex;
