--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --main-color: #F4F4F4;
-    --secondary-color: #D42039;
+    --main-color: #fffafa;
+    --secondary-color: rgb(189, 109, 255);
     --font-primary: rgba(0, 0, 0, 0.72);
     --font-secondary: #D42039;
     --border-radius: 30px;
@@ -21,7 +21,12 @@ a{
   color: #ffffff;
 }
 
-
+div, li {
+    transition: all 0.6s ease;
+}
+li {
+    transition: all 0.4s ease;
+}
 body{
     background-color: var(--main-color);
     overflow-x: hidden;
@@ -30,6 +35,8 @@ body{
 
 nav{
     background-color: var(--secondary-color);
+    background: rgb(174,189,238);
+    background: linear-gradient(63deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
     color: white;
     display: flex;  
     padding: 2% 8%;
@@ -50,6 +57,7 @@ nav .links{
 
 nav .links li:hover{
     transform: translate(5px, -2px);
+    font-weight: 700;
 }
 
 main{
@@ -102,6 +110,7 @@ main #landing-section .img-container img{
 /* Services */
 main .services{
     background-color: white;
+   
     padding: 3em 3em;
     border-radius: var(--border-radius);
     box-shadow: var(--box-shaddow);
@@ -115,16 +124,15 @@ main .services .card-container{
 }
 
 main .services .card-container .card{
-    background-color: var(--secondary-color);
     border-radius: var(--border-radius);
-    box-shadow: 20px 20px 50px 10px rgb(204, 25, 52) inset;
-    color: white;
+    background: rgb(174,189,238);
+    background: linear-gradient(60deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
+    color: rgb(255, 255, 255);
     font-size: .9em;
     width: 48%;
     margin: auto;
     padding: 2em 4em;
     margin-top: 2em;
-    transition: all 0.5 ease;
 }
 
 main .services .card-container .card i{
@@ -149,7 +157,8 @@ main #projects .projects-container{
 }
 
 main #projects .projects-container div{
-    background-color: #D42039;
+    background-color: rgb(174,189,238);
+    background-color: linear-gradient(63deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
     padding: 5em;
     width: 15em;
     border-radius: 20px;
@@ -178,7 +187,8 @@ main #projects .projects-container .proj3{
 
 main #contact-container{
     margin-top: 5em;
-    background-color: white;
+    background: rgb(174,189,238);
+    background: linear-gradient(203deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
     border-radius: var(--border-radius);
     display: flex;
     justify-content: center;
@@ -194,11 +204,13 @@ main #contact-container div{
     width: 50%;
 }
 
+main #contact-container .img-container{
+    text-align: center;
+    color: white;
+}
 main #contact-container .img-container img{
     width: 100%;
-    border-radius: 6%;main #landing-section .text-container{
-        width: 70%;
-    }
+    border-radius: 6%;
 }
 
 main #contact-container .form-contact form{
@@ -207,15 +219,21 @@ main #contact-container .form-contact form{
 }
 
 main #contact-container .form-contact h3{
-    margin-bottom: 1em;
+    display: none;
 }
+
+::placeholder {
+    color: rgb(255, 251, 251);
+  }
 
 main #contact-container .form-contact input, textarea{
     padding: 1em;
-   
+    background-color: #c0b0fac5;
     border-radius: 5px;
-    border: .1px solid ;
+    border: .1px solid #f0606000;
 }
+
+
 
 main #contact-container .form-contact textarea{
     resize: none;
@@ -223,13 +241,13 @@ main #contact-container .form-contact textarea{
 }
 
 main #contact-container .form-contact .submit{
-    background-color: var(--secondary-color);
+    background-color: var(--font-secondary);
     color: white;
     transition: background-color 0.5s ease, letter-spacing 0.5s ease;
 }
 
 main #contact-container .form-contact .submit.hovered{
-    background-color: #0068ad;
+    background-color: rgba(119, 194, 255, 0.767);
     letter-spacing: 0.5em;
 }
 
@@ -268,6 +286,7 @@ footer hr{
   
     main .services .card-container{
         flex-direction: column;
+        transition: all 0.5s ease;
     }
 
     main .services .card-container .card{
@@ -276,6 +295,13 @@ footer hr{
 
     main #contact-container .img-container{
         display: none;
+    }
+
+    main #contact-container .form-contact h3{
+        display: block;
+        text-align: center;
+        margin-bottom: 1em;
+        color: white;
     }
 
     main #contact-container{
@@ -319,7 +345,7 @@ footer hr{
 @media screen and (max-width: 800px) {
     main #landing-section{
         flex-direction: column;
-        padding-top: 25em;
+        padding-top: 24em;
         margin-bottom: 22em;
         align-items: center;
         justify-content: center;
@@ -327,9 +353,9 @@ footer hr{
     }
    
     main #landing-section .img-container img{
-        width: 80%;
+        width: 55%;
         margin: auto;
-        margin-top: -3em;
+       
     }
     main #landing-section .img-container{
         display: flex;
@@ -343,7 +369,7 @@ footer hr{
 
 /* Phone query */
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
 
     main{
         width: 92%;
@@ -367,3 +393,14 @@ footer hr{
     }
 
 }
+
+@media screen and (max-width: 353px) {
+    main #projects .projects-container div{
+        
+        width: 100%;
+        margin: auto;
+        height: 10em;
+    }
+}
+
+
