--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --main-color: #fffafa;
-    --secondary-color: rgb(189, 109, 255);
+    --secondary-color: rgb(38, 119, 241);
     --font-primary: rgba(0, 0, 0, 0.72);
     --font-secondary: #D42039;
     --border-radius: 30px;
@@ -35,8 +35,8 @@ body{
 
 nav{
     background-color: var(--secondary-color);
-    background: rgb(174,189,238);
-    background: linear-gradient(63deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
+    background: rgb(20, 122, 238);
+    background: linear-gradient(60deg, rgb(146, 193, 255) 0%, rgba(0, 68, 255, 0.966) 100%);
     color: white;
     display: flex;  
     padding: 2% 8%;
@@ -125,8 +125,8 @@ main .services .card-container{
 
 main .services .card-container .card{
     border-radius: var(--border-radius);
-    background: rgb(174,189,238);
-    background: linear-gradient(60deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
+    background: rgb(20, 122, 238);
+    background: linear-gradient(60deg, rgb(146, 193, 255) 0%, rgba(0, 68, 255, 0.966) 100%);
     color: rgb(255, 255, 255);
     font-size: .9em;
     width: 48%;
@@ -187,8 +187,8 @@ main #projects .projects-container .proj3{
 
 main #contact-container{
     margin-top: 5em;
-    background: rgb(174,189,238);
-    background: linear-gradient(203deg, rgba(174,189,238,1) 0%, rgba(240,67,175,1) 100%);
+    background: rgb(20, 122, 238);
+    background: linear-gradient(60deg, rgb(185, 198, 218) 0%, rgba(0, 68, 255, 0.966) 100%);
     border-radius: var(--border-radius);
     display: flex;
     justify-content: center;
@@ -228,7 +228,7 @@ main #contact-container .form-contact h3{
 
 main #contact-container .form-contact input, textarea{
     padding: 1em;
-    background-color: #c0b0fac5;
+    background-color: #a0c1dbc5;
     border-radius: 5px;
     border: .1px solid #f0606000;
 }
@@ -241,7 +241,7 @@ main #contact-container .form-contact textarea{
 }
 
 main #contact-container .form-contact .submit{
-    background-color: var(--font-secondary);
+    background-color: #27325f;
     color: white;
     transition: background-color 0.5s ease, letter-spacing 0.5s ease;
 }
